{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 99,
  "lineage": "88d57de0-483e-2d17-ecd5-6ecdd87b8595",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0adc098f533b9900e",
            "arn": "arn:aws:ec2:us-east-1:513922868185:instance/i-014a8bcc4c4813be0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014a8bcc4c4813be0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tenable",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08bf4e3c74c8e3a60",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.155",
            "public_ip": "3.91.229.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03dd63febf50cf3c4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0594df1e8808e08e6",
            "tags": {
              "Name": "tenable-rpm"
            },
            "tags_all": {
              "Name": "tenable-rpm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0399bb055ff81f590",
              "sg-04b92474b753d5c75",
              "sg-0ec4ed45593f218b5"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_security_group.allow_https",
            "aws_security_group.allow_ssh",
            "aws_subnet.cia",
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tenable_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513922868185:internet-gateway/igw-082badca64fb4f9aa",
            "id": "igw-082badca64fb4f9aa",
            "owner_id": "513922868185",
            "tags": {
              "Name": "tenable-igw"
            },
            "tags_all": {
              "Name": "tenable-igw"
            },
            "vpc_id": "vpc-0238a18e62728f696"
          },
          "dependencies": [
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513922868185:route-table/rtb-0a35d7e2f12b0f925",
            "id": "rtb-0a35d7e2f12b0f925",
            "owner_id": "513922868185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082badca64fb4f9aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0238a18e62728f696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tenable_igw",
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce1114931f4a276e",
            "route_table_id": "rtb-0a35d7e2f12b0f925",
            "subnet_id": "subnet-0594df1e8808e08e6"
          },
          "dependencies": [
            "aws_internet_gateway.tenable_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.cia",
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513922868185:security-group/sg-0399bb055ff81f590",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0399bb055ff81f590",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240418192000720600000002",
            "name_prefix": "terraform-",
            "owner_id": "513922868185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0238a18e62728f696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513922868185:security-group/sg-04b92474b753d5c75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b92474b753d5c75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240418192000720700000003",
            "name_prefix": "terraform-",
            "owner_id": "513922868185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0238a18e62728f696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513922868185:security-group/sg-0ec4ed45593f218b5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ec4ed45593f218b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240418192000719900000001",
            "name_prefix": "terraform-",
            "owner_id": "513922868185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0238a18e62728f696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513922868185:subnet/subnet-0594df1e8808e08e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0594df1e8808e08e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513922868185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0238a18e62728f696"
          },
          "dependencies": [
            "aws_vpc.tenable_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tenable_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513922868185:vpc/vpc-0238a18e62728f696",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0254549d43c87e6",
            "default_route_table_id": "rtb-0ca7e931dbeeae53a",
            "default_security_group_id": "sg-0eedfd4c00c61eeef",
            "dhcp_options_id": "dopt-0a23a4b629226b5ef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0238a18e62728f696",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca7e931dbeeae53a",
            "owner_id": "513922868185",
            "tags": {
              "Name": "first"
            },
            "tags_all": {
              "Name": "first"
            }
          }
        }
      ]
    }
  ]
}